--- a/client/src/components/layout/Footer.scss
+++ b/client/src/components/layout/Footer.scss
@@ -1,4 +1,4 @@
 .footer {
   height: 5vh;
-  background-color: darkgrey;
+  background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
 }
