--- a/client/src/components/auth/Login.scss
+++ b/client/src/components/auth/Login.scss
@@ -4,4 +4,13 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
+  font-size: 2rem;
+  input {
+    border: none;
+    padding: 10px;
+  }
+
+  .title {
+    margin-bottom: 3rem;
+  }
 }
