--- a/client/src/components/profile/Profile.scss
+++ b/client/src/components/profile/Profile.scss
@@ -4,13 +4,21 @@
   align-items: center;
 }
 .profileHeader {
+  color: white;
+  font-size: 1.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #5d6d7e;
+  min-width: 80vh;
+  padding: 5rem;
+  border-radius: 1rem;
+  box-shadow: 3px 3px 29px -8px rgba(0, 0, 0, 0.75);
+  margin-bottom: 2rem;
   &-social {
     display: flex;
     min-height: 5vh;
-    justify-content: space-between;
+    justify-content: space-evenly;
     min-width: 50vh;
     align-items: center;
   }
@@ -21,34 +29,68 @@
     align-items: center;
     max-height: 5rem;
   }
+  i {
+    font-size: 2.5rem;
+  }
+  a {
+    color: #f4f6f7;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: #00a0c6;
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+
+.combine {
+  background-color: #d6dbdf;
+  border-radius: 2rem;
+  color: #273746;
+  box-shadow: 3px 3px 29px -8px rgba(0, 0, 0, 0.75);
+  font-size: 1.3rem;
+  margin-bottom: 30px;
 }
 .profileAbout {
+  min-width: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: lightgrey;
-  min-width: 50vh;
+
   border-radius: 10px;
   &-skills {
-    background-color: darkgrey;
+    background-color: #abb2b9;
+    box-shadow: 3px 3px 29px -8px rgba(0, 0, 0, 0.75);
     display: flex;
     width: 100%;
     justify-content: space-around;
+    i {
+      font-size: 1.2rem;
+    }
   }
 }
 .profileCreds {
   display: flex;
-  width: 50vh;
+  min-width: 90vh;
   flex-direction: column;
-  border: 1px black solid;
-  background-color: rgb(226, 226, 226);
   &-edu {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #273746;
+    padding: 10px;
+    margin-right: 50px;
   }
   &-exp {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #273746;
+    padding: 10px;
+    margin-right: 100px;
   }
   .title {
     display: flex;
@@ -62,7 +104,15 @@
     display: flex;
     justify-content: space-around;
   }
+  h3 {
+    font-size: 2.5rem;
+    font-style: oblique;
+  }
+  h4 {
+    font-size: 1.7rem;
+  }
 }
+
 .profileGithub {
   margin-top: 2rem;
   width: 80vh;
