--- a/client/src/components/profiles/ProfileStyle.scss
+++ b/client/src/components/profiles/ProfileStyle.scss
@@ -1,14 +1,16 @@
 .profileCard {
+  box-shadow: 3px 3px 29px -8px rgba(0, 0, 0, 0.75);
   display: flex;
   justify-content: space-around;
   min-width: 40rem;
   margin-bottom: 3rem;
-  background-color: #dcdcdc;
+  background-color: #d6dbdf;
   padding: 2.5rem;
-  border: 2px solid #778899;
-  color: #232b2b;
+  border: 2px solid #1c2833;
+  border-radius: 10px;
+  color: #273746;
   li {
-    border: 1px solid black;
+    border: 1px solid #1c2833;
     padding: 10px;
     width: 100px;
     background-color: #f5f5f5;
