--- a/client/src/components/posts/Posts.scss
+++ b/client/src/components/posts/Posts.scss
@@ -32,3 +32,9 @@
   margin-left: 15px;
   margin-top: 20px;
 }
+.postForm {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 3rem;
+}
