--- a/client/src/components/profiles/ProfileStyle.scss
+++ b/client/src/components/profiles/ProfileStyle.scss
@@ -47,3 +47,19 @@
   justify-content: center;
   align-items: center;
 }
+.chat-button {
+  margin-top: 10px;
+  color: #eaeded;
+  padding: 0.8rem;
+  background-color: #273746;
+  border-radius: 12px;
+  width: 20px;
+  box-shadow: 0px 13px 44px -8px rgba(0, 0, 0, 0.75);
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    background-color: white;
+    color: #273746;
+    transform: scale(1.3);
+  }
+}
